# PulseMeter

./: .gitignore  AGENTS.md  LICENSE  README.md  dial.pptx
.github/workflows/: build-desktop-app.yml  build-firmware.yml
desktop-app/: .gitignore  README.md  pyproject.toml
desktop-app/scripts/: build.py  generate_ammeter_dial.py  generate_test_tone.py
desktop-app/src/pulsemeter_desktop/: app.py  hardware_monitor.py  settings.py
firmware/: CMakeLists.txt  README.md  config.toml  cpu_load_sender.py  partitions.csv  sdkconfig.defaults
firmware/components/webpage_config/: CMakeLists.txt  captive_portal.c
firmware/components/webpage_config/adapt/: esp32_httpd.c  esp32_wifi.c  esp32_wifi.h
firmware/components/webpage_config/cgi/: cgiwifi.c  cgiwifi.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  board.c  board.h  cpu_load.cpp  cpu_load.h  firmware_version.h  helper.c  helper.h  idf_component.yml  led.c  led.h  meter_dial.cpp  meter_dial.h  meter_server.cpp  meter_server.h  protocol.h  setting.cpp  setting.h  wifi.cpp  wifi.h
firmware/main/wifi/: app_ap_conf.cpp  app_ap_conf.hpp  rest_server.cpp  rest_server.h  web.cpp
hardware/3d/: meter-back-panel-double.SLDPRT  meter-back-panel-double.STEP  meter-back-panel.SLDPRT
pulsemeter/: .gitignore  build.py  pulsemeter.py  pulsemeter.spec  pyproject.toml  requirements.txt  settings.py  sys-settings.json
pulsemeter/fonts/: .uuid
